llm: migrate non-LLM HTTP callers to OkHttp, delete HttpClients (JCLAW-188)
Final phase of the OkHttp migration. The remaining java.net.http.HttpClient
consumers in app/ — channel webhooks, the openrouter leaderboard fetch,
the scanner production HTTP, and the WebSearchTool — all move to OkHttp,
and the utils.HttpClients utility class plus its test go.

Net: every functional HTTP call in app/ now flows through OkHttp 5.x.
Two stacks collapse to one. Doc-only Javadoc references to
java.net.http.HttpClient remain in LlmOkHttpClient and SsrfGuard
explaining why we use OkHttp; AC4 explicitly allows those.

New file:
- app/utils/OkHttpClients.java with a single shared GENERAL singleton
  (32-slot ConnectionPool, 10s connect / 30s read / 30s write / 60s call).
  Drop-in replacement for the deleted HttpClients.GENERAL across all
  non-LLM callers. Per-area tuning becomes a future ticket if any area
  shows a perf reason.

Deleted:
- app/utils/HttpClients.java
- test/HttpClientsTest.java

Migrated to OkHttp:
- app/channels/SlackChannel.java (1 call site)
- app/channels/TelegramChannel.java (1, the non-SDK clearMessageDraft path)
- app/channels/TelegramFileDownloader.java (2 — getFile + binary download)
- app/channels/WhatsAppChannel.java (2 — sendMessage + markAsRead)
- app/services/ModelDiscoveryService.java (the openrouter leaderboard fetch)
- app/tools/WebSearchTool.java (search + 6 SearchProvider impls)
- app/services/scanners/ScannerDependencies.java (production lambda)
- app/services/scanners/ScannerHttpClient.java (interface reshape:
  Response send(Request, int timeoutMs) instead of HttpResponse<String>
  send(HttpRequest); the int-timeout argument lets each scanner keep its
  per-call budget without forcing a separate OkHttpClient per scanner)
- app/services/scanners/{Configured,VirusTotal,MalwareBazaar,
  MetaDefenderCloud}Scanner.java (request-shape + interrupt handling)

The InterruptedException catch in ConfiguredHashScanner.sendJsonLookup
becomes InterruptedIO